install bootstrap lib

--- a/client/angular.json
+++ b/client/angular.json
@@ -119,6 +119,10 @@
           }
         }
       }
-    }},
-  "defaultProject": "client"
+    }
+  },
+  "defaultProject": "client",
+  "cli": {
+    "analytics": "577d94fa-dbee-4e80-a3c7-1f534220601c"
+  }
 }
