--- a/server/build.gradle
+++ b/server/build.gradle
@@ -6,7 +6,7 @@ plugins {
 
 group = 'malochak'
 version = '0.0.1'
-sourceCompatibility = '11'
+sourceCompatibility = JavaVersion.VERSION_15
 
 configurations {
 	compileOnly {
@@ -19,9 +19,7 @@ repositories {
 }
 
 dependencies {
-	implementation 'org.springframework.boot:spring-boot-starter-data-jdbc'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-	implementation 'org.springframework.boot:spring-boot-starter-jdbc'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
 	compileOnly 'org.projectlombok:lombok'
